Shrink gap between sections - fixes #51

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 
 section{
   width: 700px;
-  margin: 0 auto 200px;
+  margin: 0 auto 100px;
   padding: 0 40px;
 }
 
